node-main/deps/v8/test/message/fail/strict-octal-use-strict-before.out
*%(basename)s:32: SyntaxError: Octal escape sequences are not allowed in strict mode.
  "use\040strict";
       ^^
SyntaxError: Octal escape sequences are not allowed in strict mode.
